--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=db.bdyqdpuennvdxlzvxilk.supabase.co
-DB_PORT=5432
+DB_HOST=aws-0-us-east-2.pooler.supabase.com
+DB_PORT=6543
 DB_NAME=postgres
-DB_USER=postgres
+DB_USER=postgres.bdyqdpuennvdxlzvxilk
 DB_PASS=Alpha-1.17
