--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=aws-0-us-east-2.pooler.supabase.com
-DB_PORT=6543
-DB_NAME=postgres
-DB_USER=postgres.bdyqdpuennvdxlzvxilk
-DB_PASS=Alpha-1.17
+DB_HOST=dpg-d0pqperuibrs73823vdg-a.oregon-postgres.render.com
+DB_PORT=5432
+DB_NAME=bdpeliculas
+DB_USER=bdpeliculas_user
+DB_PASS=KSl7FjSQHsuE38bA3JY50DIKyD08VZ2b
